fix(ui): align torrent files headers

--- a/src/renderer/styles/app/partials/layout.less
+++ b/src/renderer/styles/app/partials/layout.less
@@ -873,6 +873,19 @@ torrent-sidebar + .main-panel {
             text-align: center;
         }
 
+        .torrent-details-file-selection-column .torrent-details-file-checkbox {
+            margin-right: auto;
+            margin-left: auto;
+        }
+
+        .torrent-details-files-content .torrent.table thead th {
+            .sorting.icon {
+                top: 50%;
+                margin: 0;
+                transform: translateY(-50%);
+            }
+        }
+
         .torrent-details-file-selection-column .rz-handle {
             display: none;
         }
